@@ -1,3 +1,8 @@
+2012-11-06  Joern Rennecke  <joern.rennecke@embecosm.com>
+
+	* config/epiphany/epiphany.c (epiphany_address_cost):
+	Use MODE parameter.
+
 2012-11-05  Sriraman Tallam  <tmsriram@google.com>
 
 	* doc/tm.texi.in (TARGET_OPTION_FUNCTION_VERSIONS): New hook
